# claude-split-commits

./: LICENSE  README.md  install.bat  install.sh  pyproject.toml
git_hunk_tool/: __init__.py  __main__.py  cli.py  dependency.py  errors.py  formatter.py  git_ops.py  models.py  parser.py  staging.py
skill/: split-commits.md
tests/: conftest.py  test_dependency.py  test_parser.py  test_staging.py
